Greatly simplified the quickdraw atom theme.

--- a/atom/.atom/packages/quickdraw/styles/colors.less
+++ b/atom/.atom/packages/quickdraw/styles/colors.less
@@ -1,49 +1,21 @@
-// Gruvbox colors
-@gruvbox-dark0-hard:     #2b3135;
-@gruvbox-dark0:          #2b3135;
-@gruvbox-dark0-soft:     #2b3135;
-@gruvbox-dark1:          #2b3135;
-@gruvbox-dark2:          #2b3135;
-@gruvbox-dark3:          #2b3135;
-@gruvbox-dark4:          #2b3135;
+// quickdraw colors
+@quickdraw-dark:    #2b3135;
+@quickdraw-medium:  #4c5356;
+@quickdraw-light:   #c4c4b5;
 
-@gruvbox-medium:         #4c5356;
-
-@gruvbox-light0-hard:    #c4c4b5;
-@gruvbox-light0:         #c4c4b5;
-@gruvbox-light0-soft:    #c4c4b5;
-@gruvbox-light1:         #c4c4b5;
-@gruvbox-light2:         #c4c4b5;
-@gruvbox-light3:         #c4c4b5;
-@gruvbox-light4:         #c4c4b5;
-
-@gruvbox-bright-red:     #a66959;
-@gruvbox-bright-green:   #769070;
-@gruvbox-bright-yellow:  #ac8d6e;
-@gruvbox-bright-blue:    #607a86;
-@gruvbox-bright-purple:  #80757e;
-@gruvbox-bright-aqua:    #60867f;
-@gruvbox-bright-orange:  #b38359;
-
-@gruvbox-neutral-red:    #a66959;
-@gruvbox-neutral-green:  #769070;
-@gruvbox-neutral-yellow: #ac8d6e;
-@gruvbox-neutral-blue:   #607a86;
-@gruvbox-neutral-purple: #80757e;
-@gruvbox-neutral-aqua:   #60867f;
-@gruvbox-neutral-orange: #b38359;
-
-@gruvbox-faded-red:      #a66959;
-@gruvbox-faded-green:    #769070;
-@gruvbox-faded-yellow:   #ac8d6e;
-@gruvbox-faded-blue:     #607a86;
-@gruvbox-faded-purple:   #80757e;
-@gruvbox-faded-aqua:     #60867f;
-@gruvbox-faded-orange:   #b38359;
+@quickdraw-red:     #a66959;
+@quickdraw-green:   #769070;
+@quickdraw-yellow:  #ac8d6e;
+@quickdraw-blue:    #607a86;
+@quickdraw-purple:  #80757e;
+@quickdraw-aqua:    #60867f;
+@quickdraw-orange:  #b38359;
 
 // Base colors -----------------------------------
-@syntax-accent:    @gruvbox-bright-red;
+@syntax-accent:    @quickdraw-red;
 @syntax-guide:     fade(@syntax-fg, 15%);
 @syntax-guide-alt: fade(@syntax-fg, 25%);
-@syntax-fg:        @gruvbox-light1;
-@syntax-bg:        @gruvbox-dark0;
+
+// swap these two to use a light theme.
+@syntax-fg:        @quickdraw-light;
+@syntax-bg:        @quickdraw-dark;
