--- a/atom/.atom/packages/quickdraw/styles/languages/diff.less
+++ b/atom/.atom/packages/quickdraw/styles/languages/diff.less
@@ -1,22 +1,22 @@
 .source.diff {
-  color: @gruvbox-light4;
+  color: @quickdraw-light;
 
   .meta {
-    color: @gruvbox-bright-blue;
+    color: @quickdraw-blue;
 
-    &.header.from-file { color: @gruvbox-bright-aqua; }
-    &.header.to-file { color: @gruvbox-bright-aqua; }
-    &.diff.range { color: @gruvbox-bright-yellow; }
-    &.diff.line-number { color: @gruvbox-bright-yellow; opacity: 1; }
+    &.header.from-file { color: @quickdraw-aqua; }
+    &.header.to-file { color: @quickdraw-aqua; }
+    &.diff.range { color: @quickdraw-yellow; }
+    &.diff.line-number { color: @quickdraw-yellow; opacity: 1; }
   }
 
   .markup {
-    &.deleted { color: @gruvbox-bright-red; }
-    &.inserted { color: @gruvbox-bright-green; }
+    &.deleted { color: @quickdraw-red; }
+    &.inserted { color: @quickdraw-green; }
   }
   .punctuation {
-    &.deleted { color: @gruvbox-bright-red; }
-    &.inserted { color: @gruvbox-bright-green; }
-    &.range { color: @gruvbox-bright-yellow; }
+    &.deleted { color: @quickdraw-red; }
+    &.inserted { color: @quickdraw-green; }
+    &.range { color: @quickdraw-yellow; }
   }
 }
