--- a/atom/.atom/packages/quickdraw/styles/languages/gfm.less
+++ b/atom/.atom/packages/quickdraw/styles/languages/gfm.less
@@ -2,15 +2,15 @@
   .markup {
     -webkit-font-smoothing: auto;
     &.heading {
-      color: @gruvbox-bright-blue;
+      color: @quickdraw-blue;
     }
 
     &.link {
-      color: @gruvbox-bright-red;
+      color: @quickdraw-red;
     }
   }
 
   .link .entity {
-    color: @gruvbox-bright-green;
+    color: @quickdraw-green;
   }
 }
