--- a/atom/.atom/packages/quickdraw/styles/languages/python.less
+++ b/atom/.atom/packages/quickdraw/styles/languages/python.less
@@ -1,9 +1,9 @@
 .source.python {
   .keyword.operator.logical.python {
-    color: @gruvbox-bright-red;
+    color: @quickdraw-red;
   }
 
   .variable.parameter {
-    color: @gruvbox-bright-purple;
+    color: @quickdraw-purple;
   }
 }
