--- a/atom/.atom/packages/quickdraw/styles/languages/css.less
+++ b/atom/.atom/packages/quickdraw/styles/languages/css.less
@@ -2,7 +2,7 @@
   // highlight properties/values if they are supported
   .property-name,
   .property-value {
-    color: @gruvbox-light2;
+    color: @quickdraw-light;
     &.support {
       color: @syntax-fg;
     }
