--- a/atom/.atom/packages/quickdraw/styles/languages/java.less
+++ b/atom/.atom/packages/quickdraw/styles/languages/java.less
@@ -1,18 +1,18 @@
 .source.java {
   .storage {
     &.modifier.import {
-      color: @gruvbox-bright-yellow;
+      color: @quickdraw-yellow;
     }
 
     &.type {
-      color: @gruvbox-bright-yellow;
+      color: @quickdraw-yellow;
     }
   }
 }
 
 .source.java-properties {
   .meta.key-pair {
-    color: @gruvbox-bright-blue;
+    color: @quickdraw-blue;
 
     & > .punctuation {
       color: @syntax-fg;
