--- a/atom/.atom/packages/quickdraw/styles/languages/json.less
+++ b/atom/.atom/packages/quickdraw/styles/languages/json.less
@@ -2,20 +2,20 @@
   .meta.structure.dictionary.json {
     & > .string.quoted.json {
       & > .punctuation.string {
-        color: @gruvbox-bright-blue;
+        color: @quickdraw-blue;
       }
-      color: @gruvbox-bright-blue;
+      color: @quickdraw-blue;
     }
   }
 
   .meta.structure.dictionary.json, .meta.structure.array.json {
     & > .value.json > .string.quoted.json,
     & > .value.json > .string.quoted.json > .punctuation {
-      color: @gruvbox-bright-yellow;
+      color: @quickdraw-yellow;
     }
 
     & > .constant.language.json {
-      color: @gruvbox-bright-red;
+      color: @quickdraw-red;
     }
   }
 }
