More color scheme organization!

--- a/atom/.atom/packages/quickdraw/styles/colors.less
+++ b/atom/.atom/packages/quickdraw/styles/colors.less
@@ -7,8 +7,8 @@
 @quickdraw-green:   #769070;
 @quickdraw-yellow:  #ac8d6e;
 @quickdraw-blue:    #607a86;
-@quickdraw-purple:  #80757e;
-@quickdraw-aqua:    #60867f;
+@quickdraw-magenta: #80757e;
+@quickdraw-cyan:    #60867f;
 @quickdraw-orange:  #b38359;
 
 // Base colors -----------------------------------
