--- a/atom/.atom/packages/quickdraw/styles/language.less
+++ b/atom/.atom/packages/quickdraw/styles/language.less
@@ -37,7 +37,7 @@
   }
 
   &.other.unit {
-    color: @quickdraw-purple;
+    color: @quickdraw-magenta;
   }
 }
 
@@ -60,10 +60,10 @@
 }
 
 .constant {
-  color: @quickdraw-purple;
+  color: @quickdraw-magenta;
 
   &.variable {
-    color: @quickdraw-purple;
+    color: @quickdraw-magenta;
   }
 
   &.character.escape {
@@ -71,7 +71,7 @@
   }
 
   &.numeric {
-    color: @quickdraw-purple;
+    color: @quickdraw-magenta;
   }
 
   &.other.color {
@@ -79,7 +79,7 @@
   }
 
   &.other.symbol {
-    color: @quickdraw-purple;
+    color: @quickdraw-magenta;
   }
 }
 
@@ -198,7 +198,7 @@
   }
 
   &.other.attribute-name {
-    color: @quickdraw-purple;
+    color: @quickdraw-magenta;
 
     &.id {
       color: @quickdraw-green;
@@ -227,7 +227,7 @@
   }
 
   &.link {
-    color: @quickdraw-purple;
+    color: @quickdraw-magenta;
   }
 
   &.require {
@@ -256,7 +256,7 @@
 
 .markup {
   &.bold {
-    color: @quickdraw-purple;
+    color: @quickdraw-magenta;
     font-weight: bold;
   }
 
@@ -286,7 +286,7 @@
   }
 
   &.quote {
-    color: @quickdraw-purple;
+    color: @quickdraw-magenta;
   }
 
   &.raw.inline {
