--- a/atom/.atom/packages/quickdraw/styles/languages/diff.less
+++ b/atom/.atom/packages/quickdraw/styles/languages/diff.less
@@ -4,8 +4,8 @@
   .meta {
     color: @quickdraw-blue;
 
-    &.header.from-file { color: @quickdraw-aqua; }
-    &.header.to-file { color: @quickdraw-aqua; }
+    &.header.from-file { color: @quickdraw-cyan; }
+    &.header.to-file { color: @quickdraw-cyan; }
     &.diff.range { color: @quickdraw-yellow; }
     &.diff.line-number { color: @quickdraw-yellow; opacity: 1; }
   }
