--- a/atom/.atom/packages/quickdraw/styles/syntax-variables.less
+++ b/atom/.atom/packages/quickdraw/styles/syntax-variables.less
@@ -38,7 +38,7 @@
 
 // For language entity colors
 @syntax-color-variable:   @quickdraw-blue;
-@syntax-color-constant:   @quickdraw-purple;
+@syntax-color-constant:   @quickdraw-magenta;
 @syntax-color-property:   @syntax-fg;
 @syntax-color-value:      @syntax-fg;
 @syntax-color-function:   @quickdraw-green;
@@ -46,6 +46,6 @@
 @syntax-color-class:      @quickdraw-yellow;
 @syntax-color-keyword:    @quickdraw-red;
 @syntax-color-tag:        @quickdraw-blue;
-@syntax-color-attribute:  @quickdraw-purple;
+@syntax-color-attribute:  @quickdraw-magenta;
 @syntax-color-import:     @quickdraw-red;
 @syntax-color-snippet:    @quickdraw-yellow;
