Fixed background color inconsistency. Added to atom stylesheet.

--- a/atom/.atom/packages/quickdraw/styles/colors.less
+++ b/atom/.atom/packages/quickdraw/styles/colors.less
@@ -1,5 +1,5 @@
 // quickdraw colors
-@quickdraw-dark:    #2b3135;
+@quickdraw-dark:    #20292d;
 @quickdraw-medium:  #4c5356;
 @quickdraw-light:   #c4c4b5;
 
