--- a/atom/.atom/styles.less
+++ b/atom/.atom/styles.less
@@ -1,5 +1,23 @@
+@import "syntax-variables";
+
+// Srollbar
 atom-text-editor .vertical-scrollbar,
 atom-text-editor::shadow .vertical-scrollbar {
-  opacity: 0;
-  width: 0;
+    opacity: 0;
+    width: 0;
+}
+
+// Wrap guide
+atom-text-editor::shadow .wrap-guide {
+    border-left: dashed 1px;
+    color: @syntax-wrap-guide-color;
+    background-color: transparent;
+}
+
+// Pigments dot marker
+atom-text-editor::shadow pigments-markers::shadow pigments-color-marker.dot,
+pigments-markers::shadow pigments-color-marker.dot,
+pigments-color-marker.dot {
+    transform: translate(0, -50%) scale(.66);
+    // box-shadow: 0px 0px 0px 2px white;
 }
