Gave my hacked-up atom theme modular color schemes.

--- a/atom/.atom/packages/quickdraw/styles/syntax-variables.less
+++ b/atom/.atom/packages/quickdraw/styles/syntax-variables.less
@@ -1,10 +1,9 @@
-@import "colors";
+@import "schemes/designr";
 
 // Custom Syntax Variables -----------------------------------
 
 @syntax-cursor-line: fade(@quickdraw-light, 4%); // needs to be semi-transparent to show serach results
 @syntax-bracket-matcher-background-color: lighten(@syntax-background-color, 6%);
-
 
 // Official Syntax Variables -----------------------------------
 
@@ -33,7 +32,7 @@
 // Git colors - For git diff info. i.e. in the gutter
 @syntax-color-renamed:  @quickdraw-blue;
 @syntax-color-added:    @quickdraw-green;
-@syntax-color-modified: @quickdraw-orange;
+@syntax-color-modified: @quickdraw-yellow;
 @syntax-color-removed:  @quickdraw-red;
 
 // For language entity colors
