More improvements to the installer script.

--- a/atom--home/.atom/packages/quickdraw/styles/schemes/designr.less
+++ b/atom--home/.atom/packages/quickdraw/styles/schemes/designr.less
@@ -1,4 +1,6 @@
-// quickdraw colors
+// Import this file in syntax-variables.less
+
+// Quickdraw palette.
 @quickdraw-dark:    #20292d;
 @quickdraw-medium:  #4c5356;
 @quickdraw-light:   #c4c4b5;
