Switched to urxvt like the cool kids. Split x folder to keep different programs separated. New color scheme.

--- a/atom--home/.atom/packages/quickdraw/styles/schemes/eclectic.less
+++ b/atom--home/.atom/packages/quickdraw/styles/schemes/eclectic.less
@@ -1,17 +1,17 @@
 // Import this file in syntax-variables.less
 
 // Quickdraw palette.
-@quickdraw-dark:    #20292d;
-@quickdraw-medium:  #4c5356;
-@quickdraw-light:   #c4c4b5;
+@quickdraw-dark:    #36393e;
+@quickdraw-medium:  #4b4a53;
+@quickdraw-light:   #d9dec3;
 
-@quickdraw-red:     #a66959;
-@quickdraw-green:   #769070;
-@quickdraw-yellow:  #ac8d6e;
-@quickdraw-blue:    #607a86;
-@quickdraw-magenta: #80757e;
-@quickdraw-cyan:    #60867f;
-@quickdraw-orange:  #b38359;
+@quickdraw-red:     #c77fa4;
+@quickdraw-green:   #a8b577;
+@quickdraw-yellow:  #e6c37e;
+@quickdraw-blue:    #81c7be;
+@quickdraw-magenta: #9c8db1;
+@quickdraw-cyan:    #469c91;
+@quickdraw-orange:  #cea149;
 
 // Base colors
 @syntax-accent:    @quickdraw-red;
