Remove traces of termite. Make medium color in eclectic scheme easier to read.

--- a/atom--home/.atom/packages/quickdraw/styles/schemes/designr.less
+++ b/atom--home/.atom/packages/quickdraw/styles/schemes/designr.less
@@ -18,6 +18,6 @@
 @syntax-guide:     fade(@syntax-fg, 15%);
 @syntax-guide-alt: fade(@syntax-fg, 25%);
 
-// swap these two to use a light theme.
+// Swap these two to use a light theme.
 @syntax-fg:        @quickdraw-light;
 @syntax-bg:        @quickdraw-dark;
